--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.18",
+    "@react-navigation/native": "^5.7.5",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native": "0.63.3",
+    "react-native-elements": "^2.3.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^4.2.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.2",
+    "react-navigation-material-bottom-tabs": "react-navigation/material-bottom-tabs",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
